crates/tests/other-db-tests/src/cockroach/snapshots/other_db_tests__cockroach__query_tests__aggregation__aggregate_count_artist_albums.snap
---
source: crates/tests/other-db-tests/src/cockroach/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "Albums": {
          "aggregates": {
            "how_many_albums": 2
          }
        },
        "Name": "Accept"
      },
      {
        "Albums": {
          "aggregates": {
            "how_many_albums": 1
          }
        },
        "Name": "Aerosmith"
      },
      {
        "Albums": {
          "aggregates": {
            "how_many_albums": 1
          }
        },
        "Name": "Alanis Morissette"
      },
      {
        "Albums": {
          "aggregates": {
            "how_many_albums": 1
          }
        },
        "Name": "Alice In Chains"
      },
      {
        "Albums": {
          "aggregates": {
            "how_many_albums": 2
          }
        },
        "Name": "Antônio Carlos Jobim"
      }
    ]
  }
]
